# jaxlib

./: functional.py  models.py  modules.py  pyproject.toml  reinforcement.py  training.py
nn/: modules.py
src/jaxfn/: __init__.py  models.py  modules.py  reinforcement.py  training.py
